--- a/PPACMANsis457/PPACMANsis457.vcxproj
+++ b/PPACMANsis457/PPACMANsis457.vcxproj
@@ -142,17 +142,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="console.h" />
     <ClInclude Include="fantasma.h" />
     <ClInclude Include="fruta.h" />
-    <ClInclude Include="movimiento.h" />
+    <ClInclude Include="movimientos.h" />
     <ClInclude Include="pacman.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="console.cpp" />
     <ClCompile Include="fantasma.cpp" />
     <ClCompile Include="fruta.cpp" />
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="main_basico.cpp" />
     <ClCompile Include="pacman.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
