--- a/PPACMANsis457/PPACMANsis457.vcxproj
+++ b/PPACMANsis457/PPACMANsis457.vcxproj
@@ -144,19 +144,19 @@
   <ItemGroup>
     <ClInclude Include="fantasma.h" />
     <ClInclude Include="fruta.h" />
-    <ClInclude Include="movimientos.h" />
+    <ClInclude Include="GameManager.h" />
     <ClInclude Include="pacman.h" />
-    <ClInclude Include="Textura.h" />
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="fantasma.cpp" />
     <ClCompile Include="fruta.cpp" />
+    <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="main_basico.cpp" />
     <ClCompile Include="pacman.cpp" />
-    <ClCompile Include="Textura.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="hello_world.bmp" />
+    <ResourceCompile Include="PPACMANsis457.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
