--- a/PPACMANsis457/PPACMANsis457.vcxproj
+++ b/PPACMANsis457/PPACMANsis457.vcxproj
@@ -146,9 +146,10 @@
     <ClInclude Include="fruta.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="GameObject.h" />
-    <ClInclude Include="TextureManager.h" />
+    <ClInclude Include="MapGenerator.h" />
     <ClInclude Include="Moneda.h" />
     <ClInclude Include="pacman.h" />
+    <ClInclude Include="Pared.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Texture.h" />
   </ItemGroup>
@@ -157,10 +158,11 @@
     <ClCompile Include="fruta.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GameObject.cpp" />
-    <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="main_basico.cpp" />
+    <ClCompile Include="MapGenerator.cpp" />
     <ClCompile Include="Moneda.cpp" />
     <ClCompile Include="pacman.cpp" />
+    <ClCompile Include="Pared.cpp" />
     <ClCompile Include="Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
