--- a/PPACMANsis457/PPACMANsis457.vcxproj
+++ b/PPACMANsis457/PPACMANsis457.vcxproj
@@ -154,8 +154,7 @@
     <ClInclude Include="Pila.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Texture.h" />
-    <ClInclude Include="TextureAnimation.h" />
-    <ClInclude Include="TextureManager.h" />
+    <ClInclude Include="TextureAnimationManager.h" />
     <ClInclude Include="Tile.h" />
     <ClInclude Include="TileGraph.h" />
   </ItemGroup>
@@ -171,8 +170,7 @@
     <ClCompile Include="Pared.cpp" />
     <ClCompile Include="Pila.cpp" />
     <ClCompile Include="Texture.cpp" />
-    <ClCompile Include="TextureAnimation.cpp" />
-    <ClCompile Include="TextureManager.cpp" />
+    <ClCompile Include="TextureAnimationManager.cpp" />
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="TileGraph.cpp" />
   </ItemGroup>
