--- a/PPacmanUSFX/PPacmanUSFX.vcxproj
+++ b/PPacmanUSFX/PPacmanUSFX.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Factory.cpp" />
+    <ClCompile Include="FactoryPacmanAsesino.cpp" />
     <ClCompile Include="FactoryPacmanClasico.cpp" />
     <ClCompile Include="FactoryPacmanGalactico.cpp" />
     <ClCompile Include="Fantasma.cpp" />
@@ -36,10 +37,11 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MapGenerator.cpp" />
     <ClCompile Include="Moneda.cpp" />
+    <ClCompile Include="MonedaAsesino.cpp" />
     <ClCompile Include="MonedaClasico.cpp" />
     <ClCompile Include="MonedaGalactico.cpp" />
     <ClCompile Include="Pacman.cpp" />
-    <ClCompile Include="PacmanBase.cpp" />
+    <ClCompile Include="PacmanAsesino.cpp" />
     <ClCompile Include="PacmanClasico.cpp" />
     <ClCompile Include="PacmanGalactico.cpp" />
     <ClCompile Include="Pared.cpp" />
@@ -54,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Factory.h" />
+    <ClInclude Include="FactoryPacmanAsesino.h" />
     <ClInclude Include="FactoryPacmanClasico.h" />
     <ClInclude Include="FactoryPacmanGalactico.h" />
     <ClInclude Include="Fantasma.h" />
@@ -70,11 +73,12 @@
     <ClInclude Include="Laberinto.h" />
     <ClInclude Include="MapGenerator.h" />
     <ClInclude Include="Moneda.h" />
+    <ClInclude Include="MonedaAsesino.h" />
     <ClInclude Include="MonedaClasico.h" />
     <ClInclude Include="MonedaGalactico.h" />
     <ClInclude Include="MoveDirection.h" />
     <ClInclude Include="Pacman.h" />
-    <ClInclude Include="PacmanBase.h" />
+    <ClInclude Include="PacmanAsesino.h" />
     <ClInclude Include="PacmanClasico.h" />
     <ClInclude Include="PacmanGalactico.h" />
     <ClInclude Include="Pared.h" />
