--- a/PPacmanUSFX/PPacmanUSFX.vcxproj
+++ b/PPacmanUSFX/PPacmanUSFX.vcxproj
@@ -34,6 +34,8 @@
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GamePanel.cpp" />
+    <ClCompile Include="GaPanelConcretoTipe1.cpp" />
+    <ClCompile Include="GaPanelConcretoTipe2.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MapGenerator.cpp" />
     <ClCompile Include="Moneda.cpp" />
@@ -70,6 +72,8 @@
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GamePanel.h" />
+    <ClInclude Include="GaPanelConcretoTipe1.h" />
+    <ClInclude Include="GaPanelConcretoTipe2.h" />
     <ClInclude Include="Laberinto.h" />
     <ClInclude Include="MapGenerator.h" />
     <ClInclude Include="Moneda.h" />
